Fix layout when counter title is too long

--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -3,6 +3,7 @@
   display: flex;
   border-bottom: 1px solid lightgray;
   font-size: 20px;
+  align-items: center;
 }
 
 .Counter:first-of-type {
@@ -12,6 +13,9 @@
 .Counter-title {
   flex-grow: 1;
   padding: 0 10px;
+  overflow: hidden;
+  word-wrap: break-word;
+  line-height: 1.25;
 }
 
 .Counter-count {
